--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,16 +1,14 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: glytchClaw # Your GitHub organization or username, where this repository lives
+repo: backupptime # The name of this repository
 
 sites:
   - name: Primary gotify server
     url: https://gotipi.glynch.dev
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  baseUrl: /backupptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
